--- a/index.html
+++ b/index.html
@@ -4,50 +4,67 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Oni Neko Gamer</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+        integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <div class="row">
-            <a class="col-md-4 logo" href="index.html"></a>
-            <div class="row no-gutters">
-                <div class="col">
-                    <ul id="button" class="list-inline menucontainer">
-                        <button class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
-                            <a href="#"><span>Home</span></a>
-                        </button>
-                        <button class="col-6 col-sm-3 ui-menu-color-resume list-inline-item">
-                            <a href="#"><span>Preview</span></a>
-                        </button>
-                        <button class="col-6 col-sm-3 ui-menu-color-contact list-inline-item">
-                            <a href="#"><span>Subscribe</span></a>
-                        </button>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Preview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
                     </ul>
-                    <section>
-                        <p>I have been writing as Oni Neko Gamer for around three years,
-                            it started <br>during the global pandemic as a way to take
-                            my mind off of things and<br> to write about something
-                            that I have been passionate<br>about since I was a child, Video Games!
-                            I have been playing<br> Video Games for as long as I can remember, <br>which is a normal
-                            story for people of my vintage!</p>
-                        <p>I write about import retro games more than western titles,<br> what interests me the most
-                            about them is that they weren't released locally<br>
-                            so it feels a bit like you're playing a game that no one else has seen!<br>My journey into
-                            import titles has lead me to begin to learn Japanese<br>
-                            I am nowhere near the level needed to play them without a guide<br> but I get better at it
-                            every time I try! much like coding<br>
-                        </p>
-                        </p>
-                    </section>
+                    </li>
+                    </ul>
                 </div>
             </div>
+        </nav>
+        </nav>
     </header>
     <section>
-
+        <div class="logo">
+            <a href="../assets/images/logo.png"></a>
+            <img src="../assets/images/logo.png" class="img-thumbnail" alt="oni neko gamer logo">
+        </div>
+        <p class="text-break"> I have been writing as Oni Neko Gamer for around three years, I began writing at the
+            beginning of the global pandemic as a way to take my mind away from what was happening around the world and
+            to sharpen my writing skills whilst
+            writing about something that I love doing, playing video games! I began writing on Wordpress since it as an
+            easy to use development tool for new and veteran coders a like, after examining the code on my work it
+            sparked my interest in learning how
+            to do it for myself! I am currently undertaking a Level 5 Diploma in Fullstack Web Development and with my
+            new skills I am going to migrate all of my previous work to a new, jazzier more responsive site. I mostly
+            focus on retro titles and import
+            games mostly due to growing up in the U.K and watching enviously at games that did not see a release here!
+            I also enjoy writing about Anime, Arcade sticks and modifying them as well as a host of other topics such
+            as what I am playing currently and retrospectives on whole game series. Gaming is a passion for me and
+            something that I don't think that I will
+            ever grow tired off, it is an art form that is just as valid as Cinema and Animation so I hope that you
+            follow me on my journey to spill my thoughts on the topic out into the internet.
+        </p>
+        <div class="akai">
+            <img src="../assets/images/akai-ddp.jpg" class="img-fluid" alt="image of akai katana and dodonpachi" </div>
     </section>
     <footer>
 
