made logo smaller other slight changes

--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
         </nav>
     </header>
     <section>
-        <div class="logo container">
-            <div class="col-md-12 sm-6">
-            <img src="../assets/images/logo2.png" class="img-fluid" alt="oni neko gamer logo">
-        </div>
-        </div>
+        <section>
+        <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
+        </section>
         <h1 class="h1"> Why I love writing </h1>
         <p class="text-break"> I have been writing as Oni Neko Gamer for around three years, I began writing at the
             beginning of the global pandemic as a way to take my mind away from what was happening around the world and
@@ -84,11 +82,9 @@
             writing skills aren't brilliant or your grasp of the English language is lacking I will work with you to edit your work so that you
             can share it with the community, because that is what we are all about at Oni Neko Gamer.  
             </p>
-        <div class="container">
-            <div class="col-md-12">
+            <section>  
             <img src="../assets/images/akai-ddp.jpg" class="img-fluid" alt="image of akai katana and dodonpachi" </div>
-        </div>
-        </div>
+            </section>
         </section>
     <footer class="bg-light text-center text-lg-start">
   <!-- Copyright -->
