--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Preview</a>
+                            <a class="nav-link" href="preview.html">Preview</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="subscribe.html">Subscribe</a>
                         </li>
                     </ul>
                     </li>
