--- a/preview.html
+++ b/preview.html
@@ -47,3 +47,55 @@
         <section>
             <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
         </section>
+        </section>
+        <h1 class="h1"> A preview of my work</h1>
+        <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2>
+        <p class="text-break">"The graphics are nothing special nowadays but they still hold up and have moments of charm and character to them, the
+        backgrounds are all pretty interesting and they manage to look better than some of the character models. However the
+        real star of the show here is the catchy soundtrack which still keeps my head banging whilst playing after all of these years, it is so
+        good that I’m going to leave a link to a youtube video of it at the bottom of this review for your listening discretion. The whole package comes
+        together to make a well polished fighter that may be a bit rough around the edges but is worth playing and it will keep you going for a long time
+        if you attempt to do everything in the game, it’s sequel Street Fighter Ex2 seems to be more popular than the first one and is still played competitively today however if you
+        look at this as the framework for the sequel and subsequent Arika fighters it gives you insight into how they work and it's always fun to see
+        the progression of the designers ideas in action. The push for 3D from sony in the early days
+        of the playstation usually led to disaster but in this case it was well handled and created an under appreciated spin off
+        to an already brilliant series."</p> 
+        <br>
+        <h2 class="h2">What I'm Playing! Import Gaijin Roundup Edition! おたく てがみ!!</h2>
+        <h6 class="h6"> These are small reviews of what I have been playing which are turned into full game reviews if I enjoy the game enough.</h6>
+        <h3 class="h3"> Final Fantasy 6 - Super Nintendo</h3>
+        <p class="text-break">"I'm still playing through the amazing Final Fantasy 6 and working my way towards the end whilst writing the rest of my
+        play through. At the moment progress is pretty slow since I am in the world of ruin and I need to grind a lot to level
+        up my characters before I can take on the tougher side stories and eventually the final boss! So progress is
+        unfortunately slow since grinding can be a painfully slow process but I'm getting there bit by bit."</p>
+        <br>
+        <h3 class="h3">Fire Emblem Gaiden - Nintendo Famicom</h3>
+        <p class="text-break">"I recently purchased a copy of this fantastic early Fire Emblem title, The vintage does show a bit within the game but
+        it is mostly small things that are missing such as a visual grid on the battlefield instead you have to check your
+        enemies and allies move and attack ranges yourself and plan accordingly. The other changes in this early title are
+        pretty big departures from future games such as Archers being able to attack at point blank range and mages using up
+        their own health points instead of magic points to use attack magic or heal their comrades, There is also no currency
+        system and a few other oddities! I'll be writing an article on this fantastic SRPG in the near future."</p>
+        <br>
+        <h3 class="h3">Harmful Park - Playstation One</h3>
+        <p class="text-break">"Yet Another import Japanese exclusive and one I sadly don't own a physical copy of but I instead saved hundreds of
+        pounds and bought it from the Japanese PSN store, It's a really fun game that reminds me of the Konami classic Cute-em'up Parodious at times, All of
+        the weapons are dessert and sweet based so you attack with jelly beans, trifles, ice lollies and other assorted treats it's an
+        insane ride through a theme park gone insane but one I always want to stay on just to witness the chaotic spectacle! This game has become
+        a cult classic and for good reason, for some of the most veteran Shmup players it can be a bit too easy but the insanity of it and the detailed
+        backgrounds is what keeps me coming back for more."</p>
+        <br>
+        <h3 class="h3">Konami Anniversary Collection Arcade Classics - Played on Playstation 4</h3>
+        <h3 class="h3">Also available on the Nintendo Switch, Xbox One and P.C.</h3>
+        <p class="text-break">"This compilation is full of classic Konami arcade Shmup's plus Haunted Castle .... which is a pretty terrible
+        pseudo- prototype for Castlevania, it's pretty interesting to play, as a huge Castlevania fan it's an exciting premise to be able to play it
+         but ultimately an infuriating experience, it isn't anywhere near as polished as the console versions of later Castlevania games but if you treat it
+         as an early idea for the series then it is more compelling when attemping a playthrough. The rest of the collection is taken up by a vast array of classic
+        Shmup's that are A-Jax(Typhoon) - Gradius (Nemesis) - Gradius 2 ( Vulcan Venture) - Salamander (Life Force) - Thunder
+        Cross - Twin Bee and Scramble.
+        so far Thunder Cross and the Gradius titles are my most played games out of the bunch but I'm spending time playing all
+        of them in an attempt to beat them! Since they are arcade ports they have the same level of coin guzzling that you would
+        expect for Shmups of this vintage. I'm going to write a review on this collection when I have spent more time playing
+        it."</p>
+        <br>
+
