--- a/preview.html
+++ b/preview.html
@@ -99,3 +99,22 @@
         it."</p>
         <br>
 
+        <section>
+            <img src="../assets/images/arcade stick.jpg" class="arcade" alt="An image of an arcade stick with games on top of it>
+        </section>
+
+        <footer class="bg-light text-center text-lg-start">
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
+                © 2023 Copyright: Oni Neko Gamer
+            </div>
+            <!-- Copyright -->
+        
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
+        </body>
+        
+        </html>
+
