add changes to index,preview,subscribe

--- a/preview.html
+++ b/preview.html
@@ -49,7 +49,7 @@
         </section>
         </section>
         <h1 class="h1"> A preview of my work</h1>
-        <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2>
+        <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2><!--image here-->
         <p class="text-break">"The graphics are nothing special nowadays but they still hold up and have moments of charm and character to them, the
         backgrounds are all pretty interesting and they manage to look better than some of the character models. However the
         real star of the show here is the catchy soundtrack which still keeps my head banging whilst playing after all of these years, it is so
@@ -61,7 +61,21 @@
         of the playstation usually led to disaster but in this case it was well handled and created an under appreciated spin off
         to an already brilliant series."</p> 
         <br>
-        <h2 class="h2">What I'm Playing! Import Gaijin Roundup Edition! おたく てがみ!!</h2>
+        <h2 class="h2">Fist Of The North Star - Lost Paradise</h2><!--image here-->
+        <h3 class="h3">Available on - Xbox One and P.C - reviewed on Playstation 4</h3>
+        <br>
+        <p class="text-break">"I want to go more into the fighting as that is what you will be doing for most of your time in this game, it feels
+        exactly like the Yakuza series but with the added charm of Hokuto No Ken. You can parry, counter or just go all out on
+        attack. The fighting evolves steadily as Kenshiro gains levels and it almost always feels like a meaningful upgrade when
+        you level up. This is done by using a skill tree that let's you choose from different principles of martial arts, this
+        lets the player build up Kenshiro to suit their own fighting style. Once again this is very similar to Yakuza and that
+        isn't a bad thing. One thing that is missing during combat is the use of items in the battlefield, unlike the Yakuza
+        series that would have bikes and street signs laying around for you to pummel your opponents with, this game has a
+        distinct shortage of them and it's not really clear as to why that is the case, I guess one possibility is that live in
+        the nuclear wasteland has ended up with people being less interested in material possessions? who knows! All I know is
+        that you can find a Sega SG-1000 and that's pretty rad."</p>
+        <br>
+        <h2 class="h2">What I'm Playing! Import Gaijin Roundup Edition! おたく てがみ!!</h2><!--Thumbnails here-->
         <h6 class="h6"> These are small reviews of what I have been playing which are turned into full game reviews if I enjoy the game enough.</h6>
         <h3 class="h3"> Final Fantasy 6 - Super Nintendo</h3>
         <p class="text-break">"I'm still playing through the amazing Final Fantasy 6 and working my way towards the end whilst writing the rest of my
@@ -98,8 +112,17 @@
         expect for Shmups of this vintage. I'm going to write a review on this collection when I have spent more time playing
         it."</p>
         <br>
-
-        <section>
+        <h2 class="h2">Halloween Geek Out - Baroque</h2> <!--image here-->
+        <h3 class="h3"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2</h3>
+        <p class="text-break">"Baroque is a truly unique experience with wonderful world building and a host of strange characters all with their own
+        troubles and histories. I've been playing the Japanese original release of this game and my Japanese is nowhere near
+        good enough for me to play this without the aid of a handy dandy guide, that I will leave a link to if you are
+        interested in this weird but wonderful title. I think this game has built up quite a cult following over the years and
+        hopefully it will become even more popular with the Nintendo Switch receiving a remake of this version of the game.
+        Whether it is released outside of Japan this time round is unknown but the one way to play it without the use of guides
+        to help with the language barrier is to just play the western Wii and Playstation 2 releases, the main change between
+        them is that the remake isn't in first person unlike the Playstation one and Saturn original."</p> 
+    <section>
             <img src="../assets/images/arcade stick.jpg" class="arcade" alt="An image of an arcade stick with games on top of it>
         </section>
 
