--- a/subscribe.html
+++ b/subscribe.html
@@ -47,3 +47,14 @@
         <section>
             <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
         </section>
+        <div>
+            <form>
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="lname">Last name:</label><br>
+                <input type="text" id="lname" name="lname"><br>
+                <label for="email">Email Address:</label><br>
+                <input type="email" id="email" name="email"><br>
+                <input type="submit" value="Subscribe!">
+            </form>
+        </div>
