add changes to form and subscribe page

--- a/subscribe.html
+++ b/subscribe.html
@@ -47,7 +47,8 @@
         <section>
             <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
         </section>
-        <div>
+        <!--https://blog.hubspot.com/website/html-text-box-->
+        <div class="form">
             <form>
                 <label for="fname">First name:</label><br>
                 <input type="text" id="fname" name="fname"><br>
@@ -55,6 +56,16 @@
                 <input type="text" id="lname" name="lname"><br>
                 <label for="email">Email Address:</label><br>
                 <input type="email" id="email" name="email"><br>
+                <label for="suggestion-box">Share your thoughts or ideas for articles!</label>
+                <br>
+                <textarea id="suggestion-box" name="suggestion-box"
+                rows="6" col="100"> Enter text here....</textarea><br><br>
                 <input type="submit" value="Subscribe!">
+                
             </form>
-        </div>
+        </div>      
+        
+    <div class="bg-image" style="
+        background-image: url('../assets/images/medleygames1.jpg');
+        height: 100vh;
+      "></div>
