--- a/preview.html
+++ b/preview.html
@@ -48,7 +48,8 @@
             <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
         </section>
         </section>
-        <h1 class="h1"> A preview of my work</h1>
+        <h1 class="h1"> A preview of my work</h1><br>
+        <img src="../assets/images/sfexa.jpg" id="sfexa" "class=image-thumbnail">
         <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2><!--image here-->
         <p class="text-break">"The graphics are nothing special nowadays but they still hold up and have moments of charm and character to them, the
         backgrounds are all pretty interesting and they manage to look better than some of the character models. However the
