add fotnlp.jpg styled css

--- a/preview.html
+++ b/preview.html
@@ -62,7 +62,8 @@
         of the playstation usually led to disaster but in this case it was well handled and created an under appreciated spin off
         to an already brilliant series."</p> 
         <br>
-        <h2 class="h2">Fist Of The North Star - Lost Paradise</h2><!--image here-->
+        <h2 class="h2">Fist Of The North Star - Lost Paradise</h2><!--image here--><br>
+        <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail">
         <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
         <br>
         <p class="text-break">"I want to go more into the fighting as that is what you will be doing for most of your time in this game, it feels
