add more preview images and css style

--- a/preview.html
+++ b/preview.html
@@ -62,9 +62,10 @@
         of the playstation usually led to disaster but in this case it was well handled and created an under appreciated spin off
         to an already brilliant series."</p> 
         <br>
-        <h2 class="h2">Fist Of The North Star - Lost Paradise</h2><!--image here--><br>
+        <h2 class="h2">Fist Of The North Star - Lost Paradise</h2><!--image here-->
+        <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6><br>
         <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail">
-        <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
+
         <br>
         <p class="text-break">"I want to go more into the fighting as that is what you will be doing for most of your time in this game, it feels
         exactly like the Yakuza series but with the added charm of Hokuto No Ken. You can parry, counter or just go all out on
@@ -79,13 +80,16 @@
         <br>
         <h2 class="h2">What I'm Playing! Import Gaijin Roundup Edition! おたく てがみ!!</h2><!--Thumbnails here-->
         <h6 class="h6"> These are small reviews of what I have been playing which are turned into full game reviews if I enjoy the game enough.</h6>
-        <h6 class="h6"> Final Fantasy 6 - Super Nintendo</h6>
+        <h6 class="h6"> Final Fantasy 6 - Super Nintendo</h6><br>
+        <img src="../assets/images/ff6 box art.jfif" id="ff6" class="image-thumbnail">
         <p class="text-break">"I'm still playing through the amazing Final Fantasy 6 and working my way towards the end whilst writing the rest of my
         play through. At the moment progress is pretty slow since I am in the world of ruin and I need to grind a lot to level
         up my characters before I can take on the tougher side stories and eventually the final boss! So progress is
         unfortunately slow since grinding can be a painfully slow process but I'm getting there bit by bit."</p>
         <br>
-        <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
+        <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6><br>
+        <img src="../assets/images/ffg box.jfif" id="ffg" class="image-thumbnail">
+        
         <p class="text-break">"I recently purchased a copy of this fantastic early Fire Emblem title, The vintage does show a bit within the game but
         it is mostly small things that are missing such as a visual grid on the battlefield instead you have to check your
         enemies and allies move and attack ranges yourself and plan accordingly. The other changes in this early title are
