add all preview images

--- a/preview.html
+++ b/preview.html
@@ -97,7 +97,8 @@
         their own health points instead of magic points to use attack magic or heal their comrades, There is also no currency
         system and a few other oddities! I'll be writing an article on this fantastic SRPG in the near future."</p>
         <br>
-        <h6 class="h6">Harmful Park - Playstation One</h6>
+        <h6 class="h6">Harmful Park - Playstation One</h6><br>
+        <img src="../assets/images/hp box.jfif" id="hp" class="image-thumbnail">
         <p class="text-break">"Yet Another import Japanese exclusive and one I sadly don't own a physical copy of but I instead saved hundreds of
         pounds and bought it from the Japanese PSN store, It's a really fun game that reminds me of the Konami classic Cute-em'up Parodious at times, All of
         the weapons are dessert and sweet based so you attack with jelly beans, trifles, ice lollies and other assorted treats it's an
@@ -106,7 +107,8 @@
         backgrounds is what keeps me coming back for more."</p>
         <br>
         <h6 class="h6">Konami Anniversary Collection Arcade Classics - Played on Playstation 4</h6>
-        <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6>
+        <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6><br>
+        <img src="../assets/images/konami box.jfif" id="konami" class="image-thumbnail">
         <p class="text-break">"This compilation is full of classic Konami arcade Shmup's plus Haunted Castle .... which is a pretty terrible
         pseudo- prototype for Castlevania, it's pretty interesting to play, as a huge Castlevania fan it's an exciting premise to be able to play it
          but ultimately an infuriating experience, it isn't anywhere near as polished as the console versions of later Castlevania games but if you treat it
@@ -119,7 +121,8 @@
         it."</p>
         <br>
         <h2 class="h2">Halloween Geek Out - Baroque</h2> <!--image here-->
-        <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2</h6>
+        <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2</h6><br>
+        <img src="../assets/images/baroque box.jfif" id="baroque" class="image-thumbnail">
         <p class="text-break">"Baroque is a truly unique experience with wonderful world building and a host of strange characters all with their own
         troubles and histories. I've been playing the Japanese original release of this game and my Japanese is nowhere near
         good enough for me to play this without the aid of a handy dandy guide, that I will leave a link to if you are
