styled submit button

--- a/subscribe.html
+++ b/subscribe.html
@@ -60,7 +60,7 @@
                 <br>
                 <textarea id="suggestion-box" name="suggestion-box"
                 rows="6" col="100"> Enter text here....</textarea><br><br>
-                <input type="submit" value="Subscribe!">
+                <input type="submit" class="submit-btn" value="Subscribe!">
                 
             </form>
         </div>      
