--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
     </head>
 
@@ -26,13 +27,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-ghost fa-fade" style="color: #f61313;"></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="preview.html">Preview</a>
+                            <a class="nav-link active" aria-current="page" href="preview.html"><i class="fa-solid fa-ghost fa-fade"
+                                    style="color: #06f8f4;"></i>Preview</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="subscribe.html">Subscribe</a>
+                                <a class="nav-link active" aria-current="page" href="subscribe.html"><i class="fa-solid fa-ghost fa-fade"
+                                        style="color: #ff97d0;"></i>Subscribe</a>
+                            
                         </li>
                     </ul>
                     </li>
