add modal to form

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
-    </head>
+</head>
 
 <body>
     <header>
@@ -27,16 +28,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-ghost fa-fade" style="color: #f61313;"></i>Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html"><i
+                                    class="fa-solid fa-ghost " style="color: #f61313;"></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="preview.html"><i class="fa-solid fa-ghost fa-fade"
-                                    style="color: #06f8f4;"></i>Preview</a>
+                            <a class="nav-link active " aria-current="page" href="preview.html"><i
+                                    class="fa-solid fa-ghost " style="color: #06f8f4;"></i>Preview</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="subscribe.html"><i class="fa-solid fa-ghost fa-fade"
-                                        style="color: #ff97d0;"></i>Subscribe</a>
-                            
+                            <a class="nav-link active " aria-current="page" href="subscribe.html"><i
+                                    class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
+
                         </li>
                     </ul>
                     </li>
@@ -48,55 +50,74 @@
     </header>
     <section>
         <section>
-        <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
+            <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
         </section>
         <h1 class="h1"> Why I love writing </h1>
         <p class="text-break"> I have been writing as Oni Neko Gamer for around three years, I began writing at the
             beginning of the global pandemic as a way to take my mind away from what was happening around the world and
             to sharpen my writing skills whilst
-            writing about something that I love doing, playing video games! I deided to start a blog on Wordpress since it as an
+            writing about something that I love doing, playing video games! I deided to start a blog on Wordpress since
+            it as an
             easy to use development tool for new and veteran coders a like, after examining the code on my work it
             sparked my interest in learning how
             to do it for myself! I am currently undertaking a Level 5 Diploma in Fullstack Web Development and with my
             new skills I am going to migrate all of my previous work to a new, jazzier more responsive site. I mostly
             focus on retro titles and import
-            games due to growing up in the U.K and watching enviously as games that did not see a release here slipped through our fingertips!
+            games due to growing up in the U.K and watching enviously as games that did not see a release here slipped
+            through our fingertips!
             I also enjoy writing about Anime, Arcade sticks and modifying them as well as a host of other topics such
             as what I am playing currently and retrospectives on whole game series. Gaming is a passion for me and
-            something that I don't think that I will ever grow tired off. 
+            something that I don't think that I will ever grow tired off.
         </p>
-        <p class="text-break">I like to think that I write about games that have been forgotten or just ignored by other gamers due
-            to the issues of playing a game in a foreign language but this leads to why I do it! I love highlighting games that some 
-            people may never have heard of even with the internet at the their fingertips. One of my favourite times of the year is 
-            Halloween, so I tend to write about survival horror or just horror themed titles for the occasion with previous titles 
-            being Getsuu Fuma Den, Baroque and Kid Dracula which are all different styles of horror themed games but just as appropriate
-            for the spookiest time of the year! There are also other year round events such as a 30 days of music article where I delve 
-            deep into some of my favourite game soundtracks and I also like to share my newest gaming pickups with readers....don't worry,
-            there are no long unboxing videos, just my initial thoughts on what I have purchased and how likely I am to give it a review in 
-            the near future! speaking of reviews, they are reviewed without a score but they feature a handy dandy pro's vs con's list at the bottom
-            I have always found that scoring based review systems are a bit redundant and with great writing you should be able to describe how good
-            something is without relying no numbers to do the work for you!  
+        <p class="text-break">I like to think that I write about games that have been forgotten or just ignored by other
+            gamers due
+            to the issues of playing a game in a foreign language but this leads to why I do it! I love highlighting
+            games that some
+            people may never have heard of even with the internet at the their fingertips. One of my favourite times of
+            the year is
+            Halloween, so I tend to write about survival horror or just horror themed titles for the occasion with
+            previous titles
+            being Getsuu Fuma Den, Baroque and Kid Dracula which are all different styles of horror themed games but
+            just as appropriate
+            for the spookiest time of the year! There are also other year round events such as a 30 days of music
+            article where I delve
+            deep into some of my favourite game soundtracks and I also like to share my newest gaming pickups with
+            readers....don't worry,
+            there are no long unboxing videos, just my initial thoughts on what I have purchased and how likely I am to
+            give it a review in
+            the near future! speaking of reviews, they are reviewed without a score but they feature a handy dandy pro's
+            vs con's list at the bottom
+            I have always found that scoring based review systems are a bit redundant and with great writing you should
+            be able to describe how good
+            something is without relying no numbers to do the work for you!
         </p>
-        <p class="text-break"> I think that if you are into gaming, especially the niche side of the hobby then there will be a ton of things
-            for even the most veteran of gamers to sink their teeth into. I always enjoy reading comments from the fantastic but small fan
-            base that I have built up over the past few years, as the readers are just as passionate about the topic as I am! It is slowly turning
-            into a small online community of gamers and I would love more people to join in on the fun! there is also a new section that is ran once 
-            a fortnight for reader article submission, whilst it is growing in size it would be brilliant to hear more peoples thoughts on gaming 
-            and their experiences! so if this sounds like you, then don't be shy and submit a piece of work about your favourite game even if your 
-            writing skills aren't brilliant or your grasp of the English language is lacking I will work with you to edit your work so that you
-            can share it with the community, because that is what we are all about at Oni Neko Gamer.  
-            </p>
-            <section>  
+        <p class="text-break"> I think that if you are into gaming, especially the niche side of the hobby then there
+            will be a ton of things
+            for even the most veteran of gamers to sink their teeth into. I always enjoy reading comments from the
+            fantastic but small fan
+            base that I have built up over the past few years, as the readers are just as passionate about the topic as
+            I am! It is slowly turning
+            into a small online community of gamers and I would love more people to join in on the fun! there is also a
+            new section that is ran once
+            a fortnight for reader article submission, whilst it is growing in size it would be brilliant to hear more
+            peoples thoughts on gaming
+            and their experiences! so if this sounds like you, then don't be shy and submit a piece of work about your
+            favourite game even if your
+            writing skills aren't brilliant or your grasp of the English language is lacking I will work with you to
+            edit your work so that you
+            can share it with the community, because that is what we are all about at Oni Neko Gamer.
+        </p>
+        <section>
             <img src="../assets/images/akai-ddp.jpg" class="img-fluid" alt="image of akai katana and dodonpachi" </div>
-            </section>
         </section>
+    </section>
     <footer class="bg-light text-center text-lg-start">
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
-    © 2023 Copyright: Oni Neko Gamer
-  </div>
-  <!-- Copyright -->
-            
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
+            © 2023 Copyright: Oni Neko Gamer
+        </div>
+        <!-- Copyright -->
+
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
