--- a/preview.html
+++ b/preview.html
@@ -28,15 +28,18 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-ghost fa-fade"
+                        <a class="nav-link active" aria-current="page" href="index.html">
+                            <i class="fa-solid fa-ghost "
                                 style="color: #f61313;"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="preview.html"><i class="fa-solid fa-ghost fa-fade"
-                                style="color: #06f8f4;"></i>preview</a>
+                        <a class="nav-link active" aria-current="page" href="preview.html">
+                            <i class="fa-solid fa-ghost "
+                                style="color: #06f8f4;"></i>Preview</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="subscribe.html"><i class="fa-solid fa-ghost fa-fade"
+                        <a class="nav-link active" aria-current="page" href="subscribe.html">
+                            <i class="fa-solid fa-ghost "
                                 style="color: #ff97d0;"></i>Subscribe</a>
                     
                     </li>
@@ -54,7 +57,8 @@
         </section>
     </section>
     <h1 class="h1"> A preview of my work</h1>
-    <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2><br>
+    <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2>
+    <h6 class="h6"> Date Reviewed - 26/05/21</h6><br>
     <img src="../assets/images/sfexa.jpg" id="sfexa" class="image-thumbnail">
     <!--https://linuxhint.com/align-image-right-css/-->
     <p class="text-break">"The graphics are nothing special nowadays but they still hold up and have moments of charm
@@ -79,7 +83,8 @@
     
     <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
     <!--image here-->
-    <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6><br>
+    <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
+    <h6 class="h6">Date Reviewed - 06/06/2022</h6><br>
     <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail">
 
     <br>
@@ -106,8 +111,9 @@
     <h2 class="h2">What I'm Playing! Import Gaijin Roundup Edition! おたく てがみ!!</h2>
     <!--Thumbnails here-->
     <h6 class="h6"> These are small reviews of what I have been playing which are turned into full game reviews if I
-        enjoy the game enough.</h6>
-    <h6 class="h6"> Final Fantasy 6 - Super Nintendo</h6><br>
+        enjoy the game enough.</h6><br>
+    <h6 class="h6"> Final Fantasy 6 - Super Nintendo</h6>
+    <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/ff6 box art.jfif" id="ff6" class="image-thumbnail">
     <p class="text-break">"I'm still playing through the amazing Final Fantasy 6 and working my way towards the end
         whilst writing the rest of my
@@ -116,7 +122,8 @@
         up my characters before I can take on the tougher side stories and eventually the final boss! So progress is
         unfortunately slow since grinding can be a painfully slow process but I'm getting there bit by bit."</p>
     <br>
-    <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6><br>
+    <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
+    <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/ffg box.jfif" id="ffg" class="image-thumbnail">
 
     <p class="text-break">"I recently purchased a copy of this fantastic early Fire Emblem title, The vintage does show
@@ -131,7 +138,8 @@
         currency
         system and a few other oddities! I'll be writing an article on this fantastic SRPG in the near future."</p>
     <br>
-    <h6 class="h6">Harmful Park - Playstation One</h6><br>
+    <h6 class="h6">Harmful Park - Playstation One</h6>
+    <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/hp box.jfif" id="hp" class="image-thumbnail">
     <p class="text-break">"Yet Another import Japanese exclusive and one I sadly don't own a physical copy of but I
         instead saved hundreds of
@@ -146,7 +154,8 @@
         backgrounds is what keeps me coming back for more."</p>
     <br>
     <h6 class="h6">Konami Anniversary Collection Arcade Classics - Played on Playstation 4</h6>
-    <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6><br>
+    <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6>
+    <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/konami box.jfif" id="konami" class="image-thumbnail">
     <p class="text-break">"This compilation is full of classic Konami arcade Shmup's plus Haunted Castle .... which is a
         pretty terrible
@@ -169,7 +178,8 @@
     <br>
     <h2 class="h2">Halloween Geek Out - Baroque</h2>
     <!--image here-->
-    <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2</h6><br>
+    <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2</h6>
+    <h6 class="h6">Date Reviewed - 31/10/2022</h6><br>
     <img src="../assets/images/baroque box.jfif" id="baroque" class="image-thumbnail">
     <p class="text-break">"Baroque is a truly unique experience with wonderful world building and a host of strange
         characters all with their own
