add change to navbar items

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html"><i
+                            <a class="nav-link active" id="home" aria-current="page" href="index.html"><i
                                     class="fa-solid fa-ghost " style="color: #f61313;"></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active " aria-current="page" href="preview.html"><i
+                            <a class="nav-link" id="preview" aria-current="page" href="preview.html"><i
                                     class="fa-solid fa-ghost " style="color: #06f8f4;"></i>Preview</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active " aria-current="page" href="subscribe.html"><i
+                            <a class="nav-link" id="subscribe" aria-current="page" href="subscribe.html"><i
                                     class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
 
                         </li>
