--- a/preview.html
+++ b/preview.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
 </head>
@@ -27,22 +27,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" id="home" aria-current="page" href="index.html">
-                            <i class="fa-solid fa-ghost "
-                                style="color: #f61313;"></i>Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active " id="preview" aria-current="page" href="preview.html">
-                            <i class="fa-solid fa-ghost "
-                                style="color: #06f8f4;"></i>Preview</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " id="subscribe" aria-current="page" href="subscribe.html">
-                            <i class="fa-solid fa-ghost "
-                                style="color: #ff97d0;"></i>Subscribe</a>
-                    
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="home" aria-current="page" href="index.html">
+                                <i class="fa-solid fa-ghost " style="color: #f61313;"></i>Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active " id="preview" aria-current="page" href="preview.html">
+                                <i class="fa-solid fa-ghost " style="color: #06f8f4;"></i>Preview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " id="subscribe" aria-current="page" href="subscribe.html">
+                                <i class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
+
+                        </li>
                     </ul>
                     </li>
                     </ul>
@@ -61,7 +58,7 @@
     <h6 class="h6"> Date Reviewed - 26/05/21</h6><br>
     <img src="../assets/images/sfexa.jpg" id="sfexa" class="image-thumbnail">
     <!--https://linuxhint.com/align-image-right-css/-->
-    <p class="text-break">"The graphics are nothing special nowadays but they still hold up and have moments of charm
+    <p class="text-break">The graphics are nothing special nowadays but they still hold up and have moments of charm
         and character to them, the
         backgrounds are all pretty interesting and they manage to look better than some of the character models. However
         the
@@ -78,9 +75,9 @@
         the progression of the designers ideas in action. The push for 3D from sony in the early days
         of the playstation usually led to disaster but in this case it was well handled and created an under appreciated
         spin off
-        to an already brilliant series."</p>
+        to an already brilliant series.</p>
     <br>
-    
+
     <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
     <!--image here-->
     <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
@@ -88,7 +85,7 @@
     <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail">
 
     <br>
-    <p class="text-break">"I want to go more into the fighting as that is what you will be doing for most of your time
+    <p class="text-break">I want to go more into the fighting as that is what you will be doing for most of your time
         in this game, it feels
         exactly like the Yakuza series but with the added charm of Hokuto No Ken. You can parry, counter or just go all
         out on
@@ -106,7 +103,7 @@
         live in
         the nuclear wasteland has ended up with people being less interested in material possessions? who knows! All I
         know is
-        that you can find a Sega SG-1000 and that's pretty rad."</p>
+        that you can find a Sega SG-1000 and that's pretty rad.</p>
     <br>
     <h2 class="h2">What I'm Playing! Import Gaijin Roundup Edition! おたく てがみ!!</h2>
     <!--Thumbnails here-->
@@ -115,18 +112,23 @@
     <h6 class="h6"> Final Fantasy 6 - Super Nintendo</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/ff6 box art.jfif" id="ff6" class="image-thumbnail">
-    <p class="text-break">"I'm still playing through the amazing Final Fantasy 6 and working my way towards the end
+    <p class="text-break">I'm still playing through the amazing Final Fantasy 6 and working my way towards the end
         whilst writing the rest of my
         play through. At the moment progress is pretty slow since I am in the world of ruin and I need to grind a lot to
         level
         up my characters before I can take on the tougher side stories and eventually the final boss! So progress is
-        unfortunately slow since grinding can be a painfully slow process but I'm getting there bit by bit."</p>
+        unfortunately slow since grinding can be a painfully slow process but I'm getting there bit by bit and I am still enjoying the ride
+        , considering that I missed this game when I was a kid and I didn't get into Final Fantasy until the release of FF7! it's been interesting
+        to play something that has been in my backlog for way too long now, I attempted to play the Playstation One release of FF6(it came with a demo of FFX!)
+        but for some reason my copy of the game had a weird glitch in it which cut the game dead just after you meet Sabin when you fight Vargis, for some reason
+        the Blitz button combination never worked!! So I couldn't finish the fight.</p>
     <br>
     <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/ffg box.jfif" id="ffg" class="image-thumbnail">
 
-    <p class="text-break">"I recently purchased a copy of this fantastic early Fire Emblem title, The vintage does show
+    <p class="text-break">I've recently purchased a copy of this fantastic early Fire Emblem title, The vintage does
+        show
         a bit within the game but
         it is mostly small things that are missing such as a visual grid on the battlefield instead you have to check
         your
@@ -136,12 +138,16 @@
         using up
         their own health points instead of magic points to use attack magic or heal their comrades, There is also no
         currency
-        system and a few other oddities! I'll be writing an article on this fantastic SRPG in the near future."</p>
+        system and a few other oddities! Even with all of these changes it still plays well and is a pretty decent strategy game
+        but since I have knowledge of the later games in the series this still feels very much like a prototype instead of a fully
+        formed piece of work, it is still an interesting game to look back on but it is a shame that I can't follow the story at all! 
+        I'm pretty sure it'd be interesting and I'd like to see why I'm fighting certain enemies. 
+         I'll be writing an article on this fantastic SRPG in the near future.</p>
     <br>
     <h6 class="h6">Harmful Park - Playstation One</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/hp box.jfif" id="hp" class="image-thumbnail">
-    <p class="text-break">"Yet Another import Japanese exclusive and one I sadly don't own a physical copy of but I
+    <p class="text-break">Yet Another import Japanese exclusive and one I sadly don't own a physical copy of but I
         instead saved hundreds of
         pounds and bought it from the Japanese PSN store, It's a really fun game that reminds me of the Konami classic
         Cute-em'up Parodious at times, All of
@@ -151,13 +157,13 @@
         spectacle! This game has become
         a cult classic and for good reason, for some of the most veteran Shmup players it can be a bit too easy but the
         insanity of it and the detailed
-        backgrounds is what keeps me coming back for more."</p>
+        backgrounds is what keeps me coming back for more.</p>
     <br>
     <h6 class="h6">Konami Anniversary Collection Arcade Classics - Played on Playstation 4</h6>
     <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
     <img src="../assets/images/konami box.jfif" id="konami" class="image-thumbnail">
-    <p class="text-break">"This compilation is full of classic Konami arcade Shmup's plus Haunted Castle .... which is a
+    <p class="text-break">This compilation is full of classic Konami arcade Shmup's plus Haunted Castle .... which is a
         pretty terrible
         pseudo- prototype for Castlevania, it's pretty interesting to play, as a huge Castlevania fan it's an exciting
         premise to be able to play it
@@ -174,14 +180,14 @@
         you would
         expect for Shmups of this vintage. I'm going to write a review on this collection when I have spent more time
         playing
-        it."</p>
+        it.</p>
     <br>
     <h2 class="h2">Halloween Geek Out - Baroque</h2>
     <!--image here-->
     <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2</h6>
     <h6 class="h6">Date Reviewed - 31/10/2022</h6><br>
     <img src="../assets/images/baroque box.jfif" id="baroque" class="image-thumbnail">
-    <p class="text-break">"Baroque is a truly unique experience with wonderful world building and a host of strange
+    <p class="text-break">Baroque is a truly unique experience with wonderful world building and a host of strange
         characters all with their own
         troubles and histories. I've been playing the Japanese original release of this game and my Japanese is nowhere
         near
@@ -194,7 +200,7 @@
         guides
         to help with the language barrier is to just play the western Wii and Playstation 2 releases, the main change
         between
-        them is that the remake isn't in first person unlike the Playstation one and Saturn original."</p>
+        them is that the remake isn't in first person unlike the Playstation one and Saturn original.</p>
     <section>
         <img src="../assets/images/arcade stick.jpg" class="arcade" alt="An image of an arcade stick with games on top of it>
         </section>
