add embed video

--- a/subscribe.html
+++ b/subscribe.html
@@ -68,7 +68,7 @@
                 <label for="suggestion-box">Share your thoughts or ideas for articles!</label>
                 <br>
                 <textarea id="suggestion-box" name="suggestion-box" rows="6"
-                    col="100"> Enter text here....</textarea><br><br>
+                    col="100"> </textarea><br><br>
                 <!-- Trigger/Open The Modal -->
                 <button id="myBtn">Subscribe!</button>
                 
