--- a/preview.html
+++ b/preview.html
@@ -77,6 +77,10 @@
         spin off
         to an already brilliant series.</p>
     <br>
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KfdSiRRUVSM" 
+            allowfullscreen></iframe>
+    </div>
 
     <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
     <!--image here-->
